[tool.poetry]
name = "Kuchabot"
version = "0.1.0"
description = ""
authors = ["questic questic1@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
async-timeout = "^4.0.2"
discord = "^1.7.3"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
